# ctf-wiki

./: FORUM_SETUP.md  forum-schema.sql
forum-backend/: .env.example  knexfile.js  package-lock.json  package.json
forum-backend/src/: server.js
forum-backend/src/config/: database.js
forum-backend/src/middleware/: auth.js  errorHandler.js
forum-backend/src/routes/: auth.js  categories.js  posts.js  search.js  topics.js  upload.js  users.js
forum-frontend/: index.html  package-lock.json  package.json  tailwind.config.js
forum-frontend/src/: App.tsx  index.css  main.tsx
forum-frontend/src/api/: categories.ts  posts.ts  topics.ts
forum-frontend/src/components/: Header.tsx  Layout.tsx  PostEditor.tsx  Sidebar.tsx
rust-blog/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
rust-blog/k8s/: app-deployment.yaml  app-secret.yaml  app-service.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-secret.yaml  postgres-service.yaml
rust-blog/migrations/: 001_initial.sql  002_forum_tables.sql
rust-blog/scripts/: build.sh  cleanup.sh  create-admin.sh  deploy-k8s.sh  dev.sh  migrate.sh  run.sh  setup.sh  start-db.sh
rust-blog/src/: auth.rs  database.rs  forum_handlers.rs  handlers.rs  main.rs  models.rs  templates.rs
rust-blog/static/: app.js  forum.css  forum.js  style.css
rust-blog/templates/: admin.html  base.html  index.html  post.html
rust-blog/templates/forum/: base.html  category.html  create_topic.html  index.html  topic.html
(+9 files in other folders)
